k8s/infra/knot-dns/app/ns0/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: knot-dns
      app.kubernetes.io/component: ns0
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: core-cert-manager
        - matchLabels:
            app.kubernetes.io/name: external-dns
            k8s:io.kubernetes.pod.namespace: core-external-dns
        - matchLabels:
            app.kubernetes.io/name: happydomain
            k8s:io.kubernetes.pod.namespace: infra-happydomain
    - fromCIDR:
        - 172.28.0.0/16
        - 209.112.97.240/28
        - 2001:67c:17fc::/48
      toPorts:
        - ports:
            - port: "5353"
              protocol: ANY
